[package]
name = "game-server-sample"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = "1.18.0"
cgmath = "0.18.0"
clap = { version = "4.5.20", features = ["derive"] }
egui = "0.29.1"
egui_glow = { version = "0.29.1", features = ["winit"] }
glow = "0.14.1"
glutin = "0.32.1"
glutin-winit = "0.5.0"
rand = "0.8.5"
raw-window-handle = "0.6.2"
tokio = { version = "1.40.0", features = ["full"] }
winit = "0.30.5"
